# zangetsu-logger

./: .gitignore  README.md  main.py  pyproject.toml
senju3_logger/: config.py  default_config.yaml  formatters.py  handlers.py
zangetsu_logger/: __init__.py  cloud_handlers.py  config.py  default_config.yaml  formatters.py  handlers.py
