[project]
name = "senju3-logger"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-json-logger>=3.2.1",
    "pytz>=2025.1",
    "pyyaml>=6.0.2",
]

# yamlファイルをパッケージに含める
[tool.setuptools.package-data]
"senju3_logger" = ["*.yaml"]
